Update template.json to include ConfigKeys, prevent appsettings.json from being deployed and removed appsettings.Development.json files as not required

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -51,9 +51,7 @@
     <ItemGroup>
         <Content Update="appsettings.json">
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-        </Content>
-        <Content Update="appsettings.Development.json">
-            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
         </Content>
         <Content Update="nlog.config">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
