--- a/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
@@ -20,8 +20,9 @@
     <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
     <PackageReference Include="SFA.DAS.Validation" Version="6.0.30" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.410601">
-      <PrivateAssets>all</PrivateAssets>
+    <PackageReference Include="coverlet.msbuild" Version="3.2.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
