--- a/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
@@ -19,6 +19,10 @@
         <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+        <PackageReference Include="coverlet.msbuild" Version="3.2.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
