--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0/"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0"/>
     <PackageReference Include="Microsoft.IdentityModel.Protocols.WsFederation" Version="6.10.1" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
     <PackageReference Include="NLog" Version="5.1.2" />
