--- a/src/SFA.DAS.ProviderRelationships.Host/SFA.DAS.ProviderRelationships.Host.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Host/SFA.DAS.ProviderRelationships.Host.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <LangVersion>latest</LangVersion>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <MSDeployPackagePublishDependsOn>CopyWebJobs</MSDeployPackagePublishDependsOn>
-    <WebJobProjects>$(MSBuildProjectDirectory)\..\SFA.DAS.ProviderRelationships.Jobs\SFA.DAS.ProviderRelationships.Jobs.csproj;$(MSBuildProjectDirectory)\..\SFA.DAS.ProviderRelationships.MessageHandlers\SFA.DAS.ProviderRelationships.MessageHandlers.csproj</WebJobProjects>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Web.WebJobs.Publish" Version="2.0.0" />
-  </ItemGroup>
-  <Target Name="CopyWebJobs">
-    <MSBuild Projects="$(WebJobProjects)" Targets="Restore;Build" Properties="DeployOnBuild=true;Configuration=$(Configuration);WebPublishMethod=FileSystem;PublishUrl=$(PublishIntermediateOutputPath)" RunEachTargetSeparately="true" StopOnFirstFailure="true" />
-  </Target>
+
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
+    <ItemGroup>
+        <Content Include="..\SFA.DAS.ProviderRelationships.Jobs\bin\**\*" CopyToOutputDirectory="PreserveNewest">
+            <Link>app_data\Jobs\Continuous\SFA.DAS.ProviderRelationships.Jobs\%(RecursiveDir)%(Filename)%(Extension)</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\SFA.DAS.ProviderRelationships.MessageHandlers\bin\**\*" CopyToOutputDirectory="PreserveNewest">
+            <Link>app_data\Jobs\Continuous\SFA.DAS.ProviderRelationships.MessageHandlers\%(RecursiveDir)%(Filename)%(Extension)</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="App_Data\jobs\continuous\**" CopyToOutputDirectory="Always" />
+    </ItemGroup>
 </Project>
