--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -33,11 +33,17 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+      <None Remove="C:\Users\ADM_HarrisJo\.nuget\packages\nlog.schema\5.1.2\contentFiles\any\any\NLog.xsd" />
+    </ItemGroup>
+    <ItemGroup>
         <None Update="nlog.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="nlog.Development.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="run.cmd">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="settings.job">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
