--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -23,18 +23,6 @@
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <Reference Include="System" />
-    </ItemGroup>
-    <ItemGroup>
-        <None Include="App.*.config">
-            <DependentUpon>App.config</DependentUpon>
-            <IsTransformFile>True</IsTransformFile>
-        </None>
-    </ItemGroup>
-    <ItemGroup>
-        <None Remove="C:\Users\ADM_HarrisJo\.nuget\packages\nlog.schema\5.1.2\contentFiles\any\any\NLog.xsd" />
-    </ItemGroup>
-    <ItemGroup>
         <None Update="nlog.config">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
@@ -51,6 +39,7 @@
     <ItemGroup>
         <Content Include="appsettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
         </Content>
     </ItemGroup>
 </Project>
