Fixing config key

--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
@@ -5,5 +5,5 @@
         "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
         "AzureWebJobsStorage": "UseDevelopmentStorage=true"
     },
-    "ConfigNames": "SFA.DAS.ProviderRelationships.Web,SFA.DAS.Encoding"
+    "ConfigNames": "SFA.DAS.ProviderRelationshipsV2,SFA.DAS.Encoding"
 }
