--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -9,13 +9,11 @@
         <OutputPath>bin\</OutputPath>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Azure.Identity" Version="1.8.2" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-        <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
-        <PackageReference Include="AutoMapper" Version="12.0.1" />
-        <PackageReference Include="NLog" Version="5.1.2" />
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.2" />
+<!--        <PackageReference Include="Azure.Identity" Version="1.8.2" />-->
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.14.0" />
+        <PackageReference Include="NLog" Version="5.1.4" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.3" />
         <PackageReference Include="SFA.DAS.Api.Common" Version="1.0.28" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
@@ -27,21 +25,21 @@
         <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.9" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.9" />
-        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.16" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
 
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="3.0.84" />
         <PackageReference Include="SFA.DAS.Employer.Shared.UI" Version="17.1.44" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
         <PackageReference Include="SFA.DAS.GovUK.Auth" Version="17.1.45-prerelease-14" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.Validation.Mvc" Version="6.0.30" />
 
-        <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
         <PackageReference Include="WebEssentials.AspNetCore.CdnTagHelpers" Version="1.0.21" />
 
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
