--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
         <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
