--- a/src/SFA.DAS.ProviderRelationships.Host/Properties/launchSettings.json
+++ b/src/SFA.DAS.ProviderRelationships.Host/Properties/launchSettings.json
@@ -1,9 +1,20 @@
 {
   "profiles": {
-    "SFA.DAS.EmployerAccounts.Host": {
-      "commandName": "Executable",
-      "executablePath": "C:\\Program Files\\IIS Express\\iisexpress.exe",
-      "commandLineArgs": "/path:\"$(SolutionDir)$(ProjectName)\""
-    }
+      "IIS Express": {
+          "commandName": "IISExpress",
+          "launchBrowser": true,
+          "environmentVariables": {
+              "ASPNETCORE_ENVIRONMENT": "Development"
+          }
+      },
+      "SFA.DAS.ProviderRelationships.Host": {
+          "commandName": "Project",
+          "dotnetRunMessages": true,
+          "launchBrowser": true,
+          "applicationUrl": "https://localhost:7156;http://localhost:5163",
+          "environmentVariables": {
+              "ASPNETCORE_ENVIRONMENT": "Development"
+          }
+      }
   }
 }
