--- a/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
@@ -15,10 +15,11 @@
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.49" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NLog" Version="5.1.1" />
         <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
