--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -8,24 +8,35 @@
         <WebJobType>Continuous</WebJobType>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.33" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="16.0.21" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
+        <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.37" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.3195" />
+        <PackageReference Include="SFA.DAS.Messaging" Version="3.1.133" />
+        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
+        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        
         <PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
         <PackageReference Include="NLog" Version="5.1.1" />
         <PackageReference Include="NLog.Schema" Version="4.5.3" />
         <PackageReference Include="SFA.DAS.EmployerFinance.Messages" Version="1.6.3195" />
-        <PackageReference Include="SFA.DAS.Messaging" Version="3.1.133" />
-        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.49" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
+        
+<!--        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.49" />-->
+<!--        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />-->
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
-        <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.37" />
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
         
         <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.3195" />
         
