FAI-628 - Update for include type

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -60,9 +60,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Content\lib\govuk-frontend\dist\assets\images\favicon.ico">
+      <Content Include="Content\lib\govuk-frontend\dist\assets\images\favicon.ico">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+      </Content>
     </ItemGroup>
 
 </Project>
