add missing stub auth appsettings

--- a/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
@@ -16,5 +16,8 @@
     "Version": "1.0",
     "APPINSIGHTS_INSTRUMENTATIONKEY": "",
     "AllowedHosts": "*",
-    "ResourceEnvironmentName": "LOCAL"
+    "ResourceEnvironmentName": "LOCAL",
+    "StubEmail": "<email_address>",
+    "StubId": "<user_id>",
+    "StubAuth": "true"
 }
